# AVR-ITI

./: .gitattributes  README.md
APP/: CMakeLists.txt
APP/src/: main.c
APPS/Lab1/: app1.c  app2.c  app3.c  app4.c
APPS/Lab2/: App1.c
APPS/Lab3/: App2.c
APPS/Lab4/: App3.c
APPS/Testing_LED_Switch/: main.c
COTS/: flash.cmake
COTS/HAL/BUZZER/: BUZZER_interface.h  BUZZER_program.c
COTS/HAL/KPD/: KPD_config.h  KPD_interface.h  KPD_program.c
COTS/HAL/LCD/: LCD_config.h  LCD_interface.h  LCD_private.h  LCD_program.c
COTS/HAL/LED/: LED.c  LED.h  LED_CFG.c  LED_CFG.h
COTS/HAL/SSD/: SSD_config.h  SSD_interface.h  SSD_private.h  SSD_program.c
COTS/HAL/SWITCH/: SWITCH.c  SWITCH.h  SWITCH_CFG.c  SWITCH_CFG.h
COTS/MCAL/MDIO/: CMakeLists.txt  MDIO.c  MDIO.h
COTS/MCAL/MDIO/inc/: MDIO.h  MDIO_CFG.h
COTS/MCAL/MDIO/src/: MDIO.c  MDIO_CFG.c
COTS/MCAL/MEXTI/: EXTI_Interface.h  EXTI_Private.h  EXTI_Program.c
COTS/MCAL/MGIE/: GI_interface.h  GI_program.c  GI_register.h
COTS/MCAL/MPORT/: MPORT.c  MPORT.h  MPORT_CFG.c  MPORT_CFG.h  MPORT_private.h
COTS/STD_LIB/inc/: BIT_MATH.h
LIB/: BIT_MATH.h  STD_TYPES.h
